feat: unify training data and coaching flow